objects/Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>APN_Number__c</fullName>
        <label>APN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledge_Text__c</fullName>
        <label>Acknowledge Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Siebel_ID__c</fullName>
        <label>Agreement Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annualized_Maintenance_Due_Converted__c</fullName>
        <formula>Annualized_Maintenance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Maintenance Due Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Maintenance_Due_Formula__c</fullName>
        <formula>Annualized_Maintenance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized_Maintenance_Due_Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annualized_Maintenance_Due__c</fullName>
        <label>Annualized Maintenance Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppFoundry_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, this will be unchecked. In the event that AppFoundry criteria sufficiently met, a PB will map TRUE into this field value (which will trigger an email). Req by appfoundry team</description>
        <label>AppFoundry Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Support_Rate__c</fullName>
        <formula>(Annualized_Maintenance_Due__c/ Revised_Net_License_Value__c) *100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Support Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Support_Cost_Base__c</fullName>
        <label>Application Support Cost Base</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product_ID__c</fullName>
        <description>What it does?The salesforce ID of the Opportunity Product item to which this Order Line Item relates. This is just the ID and not a lookup and will be used with the integration to RevPro to identify to which SO line this Order Line Item is associated. 
Owner? Professional Services / Finance</description>
        <inlineHelpText>The ID of the Opportunity Product item to which this Order Line Item relates, and used for association of this to the RevPro SO Lines</inlineHelpText>
        <label>Associated Opportunity Product ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product_Name__c</fullName>
        <description>What it does? Stores the name of the associated opportunity product linked to this order line item and any additional link information from the opportunity products for PS. Used for RevPro CAS linking
Downstream Impact? CAS process for PS
Owner? Professional Services/IT</description>
        <label>Associated Opportunity Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Package__c</fullName>
        <label>Base Package Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BigMachines_Quantity__c</fullName>
        <description>Downstream Impact: User for All Orders
Department Owner: All
Help Text: Used to store and bill for the quantity of items in the Order Line</description>
        <inlineHelpText>Used to store and bill for the quantity of items in the Order Line. (BigMachines_Quantity__c)</inlineHelpText>
        <label>Quantity</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <formula>TEXT(Order__r.Quote__r.Billing_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Num__c</fullName>
        <label>Build Num</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Type__c</fullName>
        <label>Build Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Flag__c</fullName>
        <formula>(TEXT(Product__r.Sub_Type__c) == &apos;Base Package&apos; &amp;&amp; 
TEXT(Product__r.Type__c) == &apos;Bundle&apos;) || 
Not(ISBLANK(Dummy_APN__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Product_Group__c</fullName>
        <description>This field is owned by Cloud Billing Team.
Manager : Wendy.
This field stores Cloud Billing Product Group name.</description>
        <formula>IF(ISBLANK(TEXT(Product__r.BillingGroup__c)), &apos;Other Fees&apos;,TEXT(Product__r.BillingGroup__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CB Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used in Customer Support NRO</description>
        <label>CD Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Support_Product__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>CD</value>
            </filterItems>
            <filterItems>
                <field>Support_Product__c.Customer_Available__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Order Line Items (CD Name)</relationshipLabel>
        <relationshipName>CD_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CX_Platform__c</fullName>
        <label>CX Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_Out_Amount__c</fullName>
        <label>Carve Out Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Update_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Tier_Set_Month__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cloud Billing. If this Order Line Item was created from a Contract Tier Set Month, store its reference here</description>
        <inlineHelpText>Cloud Billing. If this Order Line Item was created from a Contract Tier Set Month, store its reference here</inlineHelpText>
        <label>Contract Tier Set Month</label>
        <referenceTo>Contract_Tier_Set_Month__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Amount__c</fullName>
        <label>Credit Memo Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo Line</label>
        <referenceTo>Account_Billing_Info_Line__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cumulative_Total_for_Amendment_c__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>What it does? Used to store Cumulative Total for Amendment. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Cumulative Total for Amendment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Conversion_Rate__c</fullName>
        <description>When converting from Original Currency Code, what rate was used during the conversion</description>
        <inlineHelpText>When converting from Original Currency Code, what rate was used during the conversion</inlineHelpText>
        <label>Currency Conversion Rate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Qty__c</fullName>
        <label>Current Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc__c</fullName>
        <label>Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dummy_APN__c</fullName>
        <description>What it Does? Stores dummy APN number for the A la carte items for PureEngage/PureConnect Subscription.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Dummy APN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECCN__c</fullName>
        <formula>Product__r.ECCN__c</formula>
        <label>ECCN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Volume_Discount__c</fullName>
        <label>EMEA Volume Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Support_Date__c</fullName>
        <label>End Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <formula>Order__r.End_User_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_List_New__c</fullName>
        <formula>Ext_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext List New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_List__c</fullName>
        <label>Ext List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price_Change__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>What it does? Used to describe Ext Net Price Change.
Downstream Impact? -	Effects Revenue Forecasting. 
Which Department is Owner? -Finance.</description>
        <label>Ext Net Price Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price_New__c</fullName>
        <formula>Ext_Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Net Price New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price__c</fullName>
        <label>Ext Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ext_Term_List_Price_Change__c</fullName>
        <description>What it Does? Stores total list price change for the term 
Downstream Impact? Effects RevPro 
Which department is owner? IT/OM</description>
        <formula>IF(Order__r.RecordType.Name = &quot;Cloud Billing Master Order&quot; ,
List_Price__c * Quantity_Change__c * IF(Product__r.Include_in_CMMR_Total__c, Number_of_Remaining_Months__c,1),
null
)</formula>
        <label>Ext Term List Price Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Term_List_Price__c</fullName>
        <description>What it Does? Stores total list pricec for the term
Downstream Impact? Effects RevPro
Which department is owner? IT/OM</description>
        <formula>IF(Order__r.RecordType.Name = &quot;Cloud Billing Master Order&quot; , 
   List_Price__c* BigMachines_Quantity__c * IF(Product__r.Include_in_CMMR_Total__c, Order__r.Numb_of_Maint_Months__c,1),
  If(Product_Type__c=&apos;PPU&apos;,(List_Price__c* BigMachines_Quantity__c* Maintenance_No_of_Months__c),0)
)</formula>
        <label>Ext Term List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Term_Net_Price_Change__c</fullName>
        <description>What it Does? Stores total net price change for the term 
Downstream Impact? Effects RevPro 
Which department is owner? IT/OM</description>
        <formula>IF(Order__r.RecordType.Name = &quot;Cloud Billing Master Order&quot; ,
Net_Unit_Price__c * Quantity_Change__c * IF(Product__r.Include_in_CMMR_Total__c, Number_of_Remaining_Months__c,1),
null
)</formula>
        <label>Ext Term Net Price Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Term_Net_Price__c</fullName>
        <description>What it Does? Stores total net price for the term
Downstream Impact? Effects RevPro
Which department is owner? IT/OM</description>
        <formula>IF(Order__r.RecordType.Name = &quot;Cloud Billing Master Order&quot; , 
   Net_Unit_Price__c* BigMachines_Quantity__c * IF(Product__r.Include_in_CMMR_Total__c, Order__r.Numb_of_Maint_Months__c,1),
   If(Product_Type__c=&apos;PPU&apos;,(Net_Unit_Price__c* BigMachines_Quantity__c* Maintenance_No_of_Months__c),0)
)</formula>
        <label>Ext Term Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_End_of_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended End of Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Net_Price__c</fullName>
        <inlineHelpText>Extended Net Price</inlineHelpText>
        <label>Extended Net Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Applied__c</fullName>
        <label>Fees Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Care_Rate__c</fullName>
        <label>Genesys Care Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Subtotal__c</fullName>
        <label>Group Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increase__c</fullName>
        <label>Increase %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installment_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShippable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsShippable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Base_Package_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Stores the flag whether the current line is part of base package or not.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Is Base Package Line?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Overage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Decides whether the line item is an overage charge or not
Downstream Impact? Effects totals
Which department is owner? IT/Sales Ops</description>
        <label>Is Overage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_lk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Additional_Info__c</fullName>
        <description>Additional information imported from an external source</description>
        <label>Legacy Additional Info</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lic_Invoice__c</fullName>
        <label>Lic_Invoice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Metric__c</fullName>
        <formula>Order__r.Quote__r.Pricing_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Metric</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Pay Per Use</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price_New__c</fullName>
        <formula>List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_Without_Emea_Volume_Discount__c</fullName>
        <formula>Quote_Product__r.List_Price_Without_Emea_Volume_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price Without Emea Volume Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Due_Converted_1__c</fullName>
        <formula>Maintenance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Due Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Due__c</fullName>
        <label>Maintenance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Due_formula__c</fullName>
        <formula>Maintenance_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance_Due_formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_No_of_Months_Formula__c</fullName>
        <formula>Round(((YEAR(Maintenance_End_Date__c ) - YEAR(Maintenance_Start_Date__c ) - 1) *12) + (12 - (MONTH(Maintenance_Start_Date__c )) + MONTH(Maintenance_End_Date__c ))


+((DAY(Maintenance_End_Date__c)-DAY(Maintenance_Start_Date__c))/CASE ( MONTH(Maintenance_End_Date__c ) ,1,31,2,

IF(OR(MOD( YEAR(Maintenance_End_Date__c ) ,400)=0,AND(MOD(YEAR(Maintenance_End_Date__c ),4)=0,MOD(YEAR(Maintenance_End_Date__c ),100)&lt;&gt;0)),29,28)

,3,31,5,31,7,31,8,31,  10,31,12,31,30)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance_No_of_Months_Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_No_of_Months__c</fullName>
        <label>Maintenance Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <label>Maintenance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Order_APN__c</fullName>
        <formula>Order__r.Master_Order_Number__c +&apos;:&apos;+  APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Order APN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <formula>Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <inlineHelpText>Goes on Invoice (Invoice Line Description)</inlineHelpText>
        <label>Memo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Corporate_Amount__c</fullName>
        <label>NS Corporate Amount(USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NS_Currency__c</fullName>
        <label>NS Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Deferred_Account_Description__c</fullName>
        <label>NS Deferred Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Deferred_Account__c</fullName>
        <label>NS Deferred Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_ID__c</fullName>
        <label>NS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Journal_Number__c</fullName>
        <label>NS Journal Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Local_Amount__c</fullName>
        <label>NS Local Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NS_Net_Amount__c</fullName>
        <label>NS Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Quantity__c</fullName>
        <label>NS Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Rate__c</fullName>
        <label>NS Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NS_Revenue_Account_Description__c</fullName>
        <label>NS Revenue Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Revenue_Account__c</fullName>
        <label>NS Revenue Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Total_Price__c</fullName>
        <formula>Total_Price__c - Credit_Memo_Amount__c - (Carve_Out_Amount__c * (Total_Price__c /(Order__r.Total_Order__c -Order__r.Maintenance_Amount__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price_New__c</fullName>
        <formula>Net_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Unit Price New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <inlineHelpText>Rate shown on Invoice</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Remaining_Months__c</fullName>
        <formula>if ( Order__r.Quote__r.Subscription_Amend_Date__c &gt; Maintenance_Start_Date__c, floor (IF(
( Order__r.Quote__r.Subscription_End_Date__c - Order__r.Quote__r.Subscription_Amend_Date__c) / 365 * 12 &lt; 1, 1, (Order__r.Quote__r.Subscription_End_Date__c - Order__r.Quote__r.Subscription_Amend_Date__c) / 365 * 12
)), Order__r.Quote__r.No_Of_Months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Remaining Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>What it does?Store offer from quote product
Downstream Impact? Reporting. 
Which Department is Owner? IT</description>
        <formula>Quote_Product__r.Offer__c</formula>
        <label>Offer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenAir_Project_Number__c</fullName>
        <label>OpenAir Project Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating System</label>
        <referenceTo>Operating_System__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Line 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Record_Type_tmp__c</fullName>
        <description>This is a TEMPORARY field for the Record Type value.  Used by PS to extract data required for the PS RevPro data migration effort.</description>
        <formula>Order__r.RecordType.Name</formula>
        <label>Order Record Type TEMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Siebel_ID__c</fullName>
        <label>Order Siebel ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Currency_Code__c</fullName>
        <description>What the Currency was before conversion</description>
        <inlineHelpText>What the Currency was before conversion</inlineHelpText>
        <label>Original Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_License_Invoice_Date__c</fullName>
        <label>Original License Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_License_List_Price__c</fullName>
        <label>Original License List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Net_License_Value__c</fullName>
        <label>Original Net License Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_PO__c</fullName>
        <label>Original PO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Qty__c</fullName>
        <label>Original Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_CPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In CPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>PID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Approval_Required_Product__c</fullName>
        <formula>IsPickval(Product__r.Shipment_Approval__c,&apos;Highly Technical Sale - PM Approval Required&apos;)</formula>
        <label>PM Approval Required - Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POB_Type__c</fullName>
        <description>What it Does? RevPro : Store the POB Type 
Downstream Impact? RevPro integration 
Which department is owner? IT</description>
        <label>POB Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>POB_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_License_List_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Partner License List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>